tests/compile_fail/invalid_syntax.stderr
error: expected string literal
 --> tests/compile_fail/invalid_syntax.rs:5:33
  |
5 |     let _: &str = include_docs!(123);
  |                                 ^^^
